# phpmyfaq/src/api-routes.php
@@ -24,6 +24,7 @@ use phpMyFAQ\Controller\Api\LanguageController;
 use phpMyFAQ\Controller\Api\LoginController;
 use phpMyFAQ\Controller\Api\NewsController;
 use phpMyFAQ\Controller\Api\OpenQuestionController;
+use phpMyFAQ\Controller\Api\QuestionController;
 use phpMyFAQ\Controller\Api\SearchController;
 use phpMyFAQ\Controller\Api\TagController;
 use phpMyFAQ\Controller\Api\TitleController;
@@ -99,6 +100,10 @@ $routes->add(
 $routes->add(
     'api.open-questions',
     new Route("v{$apiVersion}/open-questions", ['_controller' => [OpenQuestionController::class, 'list']])
+);
+$routes->add(
+    'api.question',
+    new Route("v{$apiVersion}/question", ['_controller' => [QuestionController::class, 'create'], '_methods' => 'POST'])
 );
 $routes->add(
     'api.search',
